# codexbar-kde

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: appimage-licensing.md
packaging/: CodexBar_KDE-x86_64.spdx.json  appimage-requirements.txt  codexbar-kde.desktop  io.github.BearHuddleston.codexbar_kde.appdata.xml
scripts/: audit_appimage.py  build_appimage.sh  make_screenshots.py  normalize_appdir.py
src/codexbar_kde/: __init__.py  app.py  history.py  model.py  privacy.py  reset.py  views.py
tests/: conftest.py  test_app.py  test_history.py  test_model.py  test_packaging.py  test_reset.py  test_ui.py
