[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "codexbar-kde"
description = "Local PyQt6 dashboard + tray app for AI subscription usage on KDE/Linux, powered by the CodexBar CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["PyQt6>=6.5"]
dynamic = ["version"]
authors = [{ name = "Arkouda (BearHuddleston)" }]
keywords = ["codexbar", "kde", "qt", "dashboard", "usage", "quota", "tray"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/BearHuddleston/codexbar-kde"
Issues = "https://github.com/BearHuddleston/codexbar-kde/issues"

[project.scripts]
codexbar-kde = "codexbar_kde.app:main"

[tool.setuptools.dynamic]
version = { attr = "codexbar_kde.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
